mostrar peliculas populares

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,4 +15,12 @@
     </ion-row>
   </ion-grid>
   <app-slideshow-poster [peliculas]="peliculasRecientes"></app-slideshow-poster>
+  <ion-grid>
+    <ion-row fixed>
+      <ion-col>
+        <h3>populares</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <app-slideshow-poster [peliculas]="populares"></app-slideshow-poster>
 </ion-content>
