--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -30,9 +30,56 @@
     <ion-grid fixed>
       <ion-row size="12">
         <ion-label>
-          {{pelicula.overview}}
+          {{pelicula.overview | slice: 0: oculto}}
         </ion-label>
-      </ion-row> 
-    </ion-grid>  
+        <ion-label color="primary" (click)="oculto = 5000" *ngIf="oculto !== 5000">
+          leer mas!
+        </ion-label>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-chip *ngFor="let genero of pelicula.genres" color="primary">
+            <ion-label>
+              {{genero.name}}
+            </ion-label>
+          </ion-chip>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col>
+          <ion-label>actores</ion-label>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-slides [options]="slideOptActores">
+      <ion-slide *ngFor="let actor of actores">
+        <ion-card class="card-actor">
+          <img *ngIf="!actor.profile_path" src="./assets/no-avatar.jpg">
+          <img *ngIf="actor.profile_path" [src]="actor.profile_path | imagen">
+          <ion-label class="actor-name">
+            {{actor.name}}
+          </ion-label>
+        </ion-card>
+      </ion-slide>
+    </ion-slides>
   </ng-container>
 </ion-content>
+
+<ion-footer no-border>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="regresar()">
+        <ion-icon name="arrow-round-back" slot="start"></ion-icon>
+        <ion-label>regresar</ion-label>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button (click)="favorito()">
+        <ion-label>favorito</ion-label>
+        <ion-icon name="star-outline" slot="end"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
