--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,13 +6,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-toolbar>
-  <ion-searchbar 
-  placeholder="buscar pelicula" 
-  animated 
-  debounce="700"
-  [value]="textoBuscar"
-  (ion-change)="buscar($event)">
-</ion-searchbar>
+  <ion-searchbar placeholder="buscar pelicula" animated debounce="700" [value]="textoBuscar" (ionChange)="buscar($event)"></ion-searchbar>
 </ion-toolbar>
 <ion-content>
   <ion-grid>
@@ -20,7 +14,7 @@
       <ion-col text-center>
         <ion-spinner name="crescent"></ion-spinner>
       </ion-col>
-    </ion-row> 
+    </ion-row>
   </ion-grid>
   <ion-list>
     <ion-list-header>
@@ -28,6 +22,6 @@
     </ion-list-header>
     <ion-item *ngFor="let idea of ideas" (click)="textoBuscar = idea">
       <ion-label color="primary">{{idea}}</ion-label>
-    </ion-item>  
+    </ion-item>
   </ion-list>
 </ion-content>
